# ram

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Config.cmake.in  LICENCE  README.md
.github/workflows/: ram.yml
include/biosoup/: nucleic_acid.hpp  overlap.hpp
include/ram/: bloom_filter.hpp  minimizer_engine.hpp  overlap.hpp  ram.hpp  sequence.hpp
src/: accuracy.cpp  aligner.cpp  aligner.hpp  main.cpp  minimizer_engine.cpp  minimizers.cpp  minimizers.hpp  ram_aligner.cpp  ram_aligner.hpp  ram_mapper.cpp  ram_minimizer.cpp  ram_minimizer.hpp
test/: minimizer_engine_test.cpp  ram_reference_data_test.cpp
